# importa

./: .clang-format  .clangd_t  .gitignore  CMakeLists.txt  convert.ps1  hello.ixx  main.cpp
modules/executor/: executor.cpp  executor.ixx
modules/module_processor/: module_processor.cpp  module_processor.ixx
modules/toolchains/: toolchains.cpp  toolchains.ixx
tests/: executor.cpp  module_processor.cpp  test.cpp  toolchains.cpp
tools/: convert_compile_commands.cpp  impa_converter.hpp  impa_gen.cpp  impa_parser.hpp  impa_utils.hpp
